init almost final project